--- a/src/components/Map.module.css
+++ b/src/components/Map.module.css
@@ -25,8 +25,8 @@
 }
 
 :global(.leaflet-popup .leaflet-popup-content span:first-child) {
-  font-size: 2.5rem;
-  line-height: 1;
+  font-size: 2rem;
+  /* line-height: 1; */
 }
 
 :global(.leaflet-popup .leaflet-popup-tip) {
